--- a/app/views/group_banners/show.html.erb
+++ b/app/views/group_banners/show.html.erb
@@ -79,7 +79,7 @@
           <% end %>
         </table>
         <% else %>
-          <%=l(:label_group_banner_associated_asso_none)%>
+          <p class="nodata"><%= l(:label_group_banner_convention_none) %></p>
         <% end %>
     </fieldset>
 </div>
