--- a/app/views/newsletter_users/edit.html.erb
+++ b/app/views/newsletter_users/edit.html.erb
@@ -12,8 +12,8 @@
     <%= f.text_field :user_id %>
   </p>
   <p>
-    <%= f.label :asso_id %><br />
-    <%= f.text_field :asso_id %>
+    <%= f.label :convention_id %><br />
+    <%= f.text_field :convention_id %>
   </p>
   <p>
     <%= f.label :data_scadenza %><br />
