--- a/app/views/newsletter_users/index.html.erb
+++ b/app/views/newsletter_users/index.html.erb
@@ -16,7 +16,7 @@
   <tr>
     <td><%=h newsletter_user.email_type %></td>
     <td><%=h newsletter_user.user_id %></td>
-    <td><%=h newsletter_user.asso_id %></td>
+    <td><%=h newsletter_user.convention_id %></td>
     <td><%=h newsletter_user.data_scadenza %></td>
     <td><%=h newsletter_user.html %></td>
     <td><%=h newsletter_user.newsletter_id %></td>
