--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
       <% end %>
     </table>
   <% else %>
-    <%=l(:label_newsletter_none)%>
+    <p class="nodata"><%= l(:label_newsletter_none) %></p>
   <% end %>
 
 </div>
