--- a/app/views/conventions/_form.html.erb
+++ b/app/views/conventions/_form.html.erb
@@ -1,10 +1,35 @@
 <%= f.error_messages %>
 
 <div class="box tabular">
+  <h3>Convenzione - competenza geografica</h3>
+  <% if @conv.new_record? %>
+    <h4><%= @conv.pact %></h4>
+  <% end %>
+  <p><%= f.select :cross_organization_id, (CrossOrganization.all.collect {|c| [c.name, c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_cross_organization) %></p>
+  <p><%= f.select :region_id, (Region.all.collect {|c| [c.name, c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_region) %></p>
+  <p><%= f.select :province_id, (Province.all.collect {|c| [c.name + ' (' + c.sigla + ')', c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_province) %></p>
+</div>
+
+<div class="box tabular">
+  <h3>Responsabile</h3>
+  <p><%= f.select :user_id, (User.all.collect {|c| [c.lastname + ' ' + c.firstname +  ' (' + c.login + ')', c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_manager) %></p>
+  <p><%= f.check_box :richiedinumeroregistrazione, :label => :label_richiedinumeroregistrazione %></p>
+  <p><%= f.date_select :data_scadenza, :label => :field_data_scadenza %></p>
+  <p><%= f.text_field :nota, :label => :field_nota, :size => 40  %></p>
+</div>
+
+
+<div class="box tabular">
+  <h3>Dati newsletter</h3>
+  <% if @conv.new_record? %>
+    <h4><%= @conv.name %></h4>
+  <% end %>
   <p><%= f.text_field :ragione_sociale, :label => :field_ragione_sociale, :required => true, :size => 40 %></p>
   <p><%= f.text_field :indirizzo, :label => :field_indirizzo, :size => 50 %></p>
+  <p><%= f.select :comune_id, (Comune.all.collect {|c| [c.name, c.id]}), :include_blank => false, :required => true, :size => 60, :title => l(:label_comune) %></p>
   <p><%= f.text_field :email, :label => :field_email, :required => true, :size => 20 %></p>
   <p><%= f.text_field :presidente, :label => :field_presidente, :size => 40  %></p>
+  <p><%= f.text_field :referente, :label => :field_referente, :size => 40  %></p>
   <p><%= f.text_field :consulente, :label => :field_consulente, :size => 40  %></p>
   <p><%= f.text_field :logo, :label => :field_logo, :size => 40  %></p>
   <p><%= f.text_field :telefono, :label => :field_telefono, :size => 40  %></p>
@@ -13,7 +38,7 @@
   <p><%= f.text_area :comunicazioni, :required => false, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
   <p><%= f.text_field :email_alt, :label => :field_email_alt, :size => 20 %></p>
   <p><%= f.file_field :image, :label => :field_immagine %> </p>
-  <p id="prev" style="max-height: 300px;"> <%= image_tag @asso.image.url(:m) %>   </p>
+  <p id="prev" style="max-height: 300px;"> <%= image_tag @conv.image.url(:m) %>   </p>
   <p>
     <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
       <li>
@@ -37,7 +62,7 @@
  </div>
  <script type="text/javascript">
     (function () {
-      document.getElementById('asso_image').addEventListener('change', function(event) {
+      document.getElementById('Convention_image').addEventListener('change', function(event) {
               if (!event) // i.e. the argument is undefined or null
                 event = window.event;
                 handleFileSelect(event, 'prev', '')
