--- a/app/views/conventions/new.html.erb
+++ b/app/views/conventions/new.html.erb
@@ -1,5 +1,5 @@
-<h2><%= link_to l(:label_asso_plural), assos_path %> &#187; <%= l(:label_asso_new) %></h2>
-<% labelled_form_for @asso, :html => {:multipart => true} do |f| %>
+<h2><%= link_to l(:label_convention_plural), conventions_path %> &#187; <%= l(:label_convention_new) %></h2>
+<% labelled_form_for @conv, :html => {:multipart => true} do |f| %>
     <%= render :partial => 'form', :locals => {:f => f} %>
     <p>
       <%= f.submit l(:button_create) %>
