--- a/app/views/editorial/_blocco_account.html.erb
+++ b/app/views/editorial/_blocco_account.html.erb
@@ -27,25 +27,20 @@ logged? (<%= User.current.logged? % >)<br />
         <%= link_to l(:label_my_page), :controller => 'mio_profilo', :action => 'account' %>
       </li>
     <% end %>
-    <% if User.current && User.current.associazione_affiliata() %>
+    <% if User.current && User.current.cross_organization %>
       <li>
-        ASSOCIAZIONE: <%= link_to h(User.current.associazione_affiliata()), asso_path(User.current.associazione_affiliata()) %>
+        FEDERAZIONE: <%= link_to h(User.current.cross_organization), cross_organization_path (User.current.cross_organization) %>
       </li>
     <% end %>
-    <% if User.current && User.current.sigla_tipo() %>
+    <% if User.current && User.current.convention %>
       <li>
-        CROSS ORGANIZATION: <%= link_to h(User.current.sigla_tipo()), cross_organization_path (User.current.sigla_tipo()) %>
-      </li>
-    <% end %>
-    <% if User.current && User.current.organization() %>
-      <li>
-        ORGANISMO: <%= link_to h(User.current.organization()), organization_path(User.current.organization()) %>
+        CONVENZIONE: <%= link_to h(User.current.convention), convention_path(User.current.convention) %>
       </li>
     <% end %>
     <% if User.current && User.current.responsable? && User.current.responsable_of
-      User.current.responsable_of.each do |organismo| %>
+      User.current.responsable_of.each do |conv| %>
       <li>
-        <%= link_to h(organismo), organization_path(organismo) %>
+        <%= link_to h(conv), convention_path(conv) %>
       </li>
     <% end
     end %>
